fix: add NFS mount point to docker-compose

--- a/monolithic-with-storage/docker-compose.yml
+++ b/monolithic-with-storage/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_NAME=${DB_NAME}
       - SECRET_KEY=${SECRET_KEY}
+      - NFS_MOUNT_POINT=${NFS_MOUNT_POINT}
     ports:
       - "5000:5000"
     volumes:
