--- a/microservices-refactor/services/auth/requirements.txt
+++ b/microservices-refactor/services/auth/requirements.txt
@@ -4,6 +4,7 @@ cffi==1.17.1
 click==8.1.8
 cryptography==44.0.3
 Flask==3.1.0
+flask-cors==5.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.1
