--- a/microservices-refactor/services/book/docker-compose.yml
+++ b/microservices-refactor/services/book/docker-compose.yml
@@ -1,36 +1,24 @@
 version: '3.8'
 
 services:
-  db:
-    image: mysql:8
-    restart: always
-    environment:
-      MYSQL_DATABASE: bookstore
-      MYSQL_USER: bookstore_user
-      MYSQL_PASSWORD: bookstore_pass
-      MYSQL_ROOT_PASSWORD: root_pass
-    ports:
-      - "3306:3306"
-    volumes:
-      - db_data:/var/lib/mysql
-    networks:
-      - bookstore_net
-
   flaskapp:
     build: .
     restart: always
     environment:
       - FLASK_ENV=development
       - PYTHONUNBUFFERED=1
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - SECRET_KEY=${SECRET_KEY}
+      - NFS_MOUNT_POINT=${NFS_MOUNT_POINT}
     ports:
-      - "5000:5000"
-    depends_on:
-      - db
+      - "5001:5001"
+    volumes:
+      - /mnt/nfs:/mnt/nfs
     networks:
       - bookstore_net
-
-volumes:
-  db_data:
 
 networks:
   bookstore_net:
