--- a/microservices-refactor/services/book/requirements.txt
+++ b/microservices-refactor/services/book/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 marshmallow==4.0.0
+pillow==11.2.1
 pycparser==2.22
 PyMySQL==1.1.1
 SQLAlchemy==2.0.40
