feat: attemp to deploy

--- a/microservices-refactor/frontend/.env.example
+++ b/microservices-refactor/frontend/.env.example
@@ -1,2 +1,4 @@
-NEXT_PUBLIC_BASE_URL_API_AUTH=http://localhost:5000/objective-3
-NEXT_PUBLIC_BASE_URL_API_BOOK=http://localhost:5001/objective-3
+NEXT_PUBLIC_BASE_URL_API_AUTH=http://host.docker.internal:5000/objective-3
+NEXT_PUBLIC_BASE_URL_API_BOOK=http://host.docker.internal:5001/objective-3
+NEXT_PUBLIC_BASE_URL_STATIC_SERVER=http://host.docker.internal:4000
+
