feat: add order service to docker-compose

--- a/microservices-refactor/docker-compose.yml
+++ b/microservices-refactor/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     environment:
       - NEXT_PUBLIC_BASE_URL_API_AUTH=http://auth:5000/objective-3
       - NEXT_PUBLIC_BASE_URL_API_BOOK=http://book:5001/objective-3
+      - NEXT_PUBLIC_BASE_URL_API_ORDER=http://order:5002/objective-3
       - BASE_URL_STATIC_SERVER=http://frontend:4000
     ports:
       - "4000:4000"
@@ -47,6 +48,25 @@ services:
       - NFS_MOUNT_POINT=${NFS_MOUNT_POINT}
     ports:
       - "5001:5001"
+    volumes:
+      - /mnt/nfs:/mnt/nfs
+    networks:
+      - project-2
+
+  order:
+    build: ./services/order
+    restart: always
+    environment:
+      - FLASK_ENV=development
+      - PYTHONUNBUFFERED=1
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_HOST=${DB_HOST}
+      - DB_NAME=${DB_NAME}
+      - SECRET_KEY=${SECRET_KEY}
+      - NFS_MOUNT_POINT=${NFS_MOUNT_POINT}
+    ports:
+      - "5002:5002"
     volumes:
       - /mnt/nfs:/mnt/nfs
     networks:
