--- a/microservices-refactor/frontend/package.json
+++ b/microservices-refactor/frontend/package.json
@@ -12,16 +12,14 @@
     "axios": "^1.9.0",
     "express": "^4.21.2",
     "next": "15.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "22.15.17",
+    "@types/react": "19.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
